--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -381,9 +381,9 @@
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 
-<!ENTITY Ctr_openInCurrentTab			"Open inputs in current tab">
-<!ENTITY Ctr_openInNewTab				"Open inputs in a new tab">
-<!ENTITY Ctr_openInNewWindow			"Open inputs in a new window">
+<!ENTITY Ctr_openInCurrentTab			"Abrir entradas en la pestaña actual">
+<!ENTITY Ctr_openInNewTab				"Abrir entradas en una nueva pestaña">
+<!ENTITY Ctr_openInNewWindow			"Abrir entradas en una nueva ventana">
 
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey				"n">
