rename Puzzle Toolbars to Puzzle Bars

--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Přesunutelný stavový řádek">
 <!ENTITY Ctr_mstatusbars4e	"Stavový řádek je nastaven pomocí rozšíření 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Stavový řádek je nastaven pomocí rozšíření 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Stavový řádek je nastaven pomocí rozšíření 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"Stavový řádek je nastaven pomocí rozšíření 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"Stavový řádek je nastaven pomocí rozšíření 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Spojit tlačítka zastavit &amp; obnovit">
 <!ENTITY Ctr_stoprel1		"Důležité: umístěte tlačítko Obnovit za tlačítko Zastavit!">
