--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
 <!ENTITY Ctr_mstatusbars4e	"Statuslinje-panel styres af 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Statuslinje-panel styres af 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Statuslinje-panel styres af 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"Statuslinje-panel styres af 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"Statuslinje-panel styres af 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Stop &amp; genindlæs: kombinér knapper på værktøjslinje">
 <!ENTITY Ctr_stoprel1		"Vigtigt: placér genindlæs efter stop!">
