--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Μετακινήσιμο πινακίδιο γραμμής κατάστασης">
 <!ENTITY Ctr_mstatusbars4e	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «Status-4-Evar»">
 <!ENTITY Ctr_mstatusbartpp	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «ThePuzzlePiece»">
-<!ENTITY Ctr_mstatusbarpzt	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «Puzzle Toolbars»">
+<!ENTITY Ctr_mstatusbarpzt	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «Puzzle Bars»">
 <!ENTITY Ctr_mstatusbarabr	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «The Addon Bar (Restored)»">
 <!ENTITY Ctr_combrelstop	"Κουμπιά «Διακοπή» &amp; «Ανανέωση»: συνδυασμός κουμπιών στην εργαλειοθήκη">
 <!ENTITY Ctr_stoprel1		"Σημαντικό: τοποθετήστε το κουμπί «Ανανέωση» μετά από το κουμπί «Διακοπή»!">
