--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"El panel de barra de estado está controlado por 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"El panel de barra de estado está controlado por 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"El panel de barra de estado está controlado por 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"El panel de barra de estado está controlado por 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Combinar botones Parar-Recargar">
 <!ENTITY Ctr_stoprel1		"Importante: ¡Sitúe el botón Recargar después del botón Parar!">
