--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Liigutatav olekupaneel">
 <!ENTITY Ctr_mstatusbars4e	"Olekuriba paneeli kontrollib 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Olekuriba paneeli kontrollib 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Olekuriba paneeli kontrollib 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"Olekuriba paneeli kontrollib 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"Olekuriba paneeli kontrollib 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Peatamine &amp; uuestilaadimine: ühenda nupud tööriistaribal">
 <!ENTITY Ctr_stoprel1		"Tähtis: paiguta uuestilaadimise nupp peatamise nupu järele!">
