--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Rendre mobile le panneau de la barre d'état">
 <!ENTITY Ctr_mstatusbars4e	"Le panneau de la barre d'état est contrôlé par « Status-4-Evar ».">
 <!ENTITY Ctr_mstatusbartpp	"Le panneau de la barre d'état est contrôlé par « The Puzzle Piece ».">
-<!ENTITY Ctr_mstatusbarpzt	"Le panneau de la barre d'état est contrôlé par « Puzzle Toolbars ».">
+<!ENTITY Ctr_mstatusbarpzt	"Le panneau de la barre d'état est contrôlé par « Puzzle Bars ».">
 <!ENTITY Ctr_mstatusbarabr	"Le panneau de la barre d'état est contrôlé par « The Addon Bar (Restored) ».">
 <!ENTITY Ctr_combrelstop 	"« Arrêter » &amp; « Actualiser » : combiner les boutons sur la barre d'outils">
 <!ENTITY Ctr_stoprel1		"Important : positionner le bouton « Actualiser » après le bouton « Arrêter » !">
