--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
 <!ENTITY Ctr_mstatusbars4e	"La barra di stato è gestita da 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"La barra di stato è gestita da 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"La barra di stato è gestita da 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"La barra di stato è gestita da 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"La barra di stato è gestita da 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Unisci i pulsanti Stop e Ricarica">
 <!ENTITY Ctr_stoprel1		"Importante: disporre il pulsante Ricarica a destra del pulsante Stop!">
