--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
 <!ENTITY Ctr_mstatusbars4e	"ステータスバーパネルは Status-4-Evar で制御されます。">
 <!ENTITY Ctr_mstatusbartpp	"ステータスバーパネルは ThePuzzlePiece で制御されます。">
-<!ENTITY Ctr_mstatusbarpzt	"ステータスバーパネルは Puzzle Toolbars で制御されます。">
+<!ENTITY Ctr_mstatusbarpzt	"ステータスバーパネルは Puzzle Bars で制御されます。">
 <!ENTITY Ctr_mstatusbarabr	"ステータスバーパネルは The Addon Bar (Restored) で制御されます。">
 <!ENTITY Ctr_combrelstop	"中止ボタンと再読み込みボタンを組み合わせる">
 <!ENTITY Ctr_stoprel1		"重要：停止ボタンの後ろに再読み込みボタンを設置します">
