--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Painel da Barra de Status Móvel">
 <!ENTITY Ctr_mstatusbars4e	"O Painel da Barra de Status é Controlado Pelo 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"O Painel da Barra de Status é Controlado Pelo 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"O Painel da Barra de Status é Controlado Pelo 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"O Painel da Barra de Status é Controlado Pelo 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"O Painel da Barra de Status é Controlado Pelo 'The Addon Bar (Restaurado)'">
 <!ENTITY Ctr_combrelstop	"Combinar os Botões Parar e Recarregar">
 <!ENTITY Ctr_stoprel1		"Barra de Ferramentas: Colocar o Botão Recarregar Depois do Botão Parar!">
