--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Подвижная строка состояния">
 <!ENTITY Ctr_mstatusbars4e	"Панель статуса контролируется 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Панель статуса контролируется 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Панель статуса контролируется 'Puzzle Toolbars'">
+<!ENTITY Ctr_mstatusbarpzt	"Панель статуса контролируется 'Puzzle Bars'">
 <!ENTITY Ctr_mstatusbarabr	"Панель статуса контролируется 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Совместить кнопки «Остановить» и «Перезагрузить»">
 <!ENTITY Ctr_stoprel1		"Кнопка остановки меняется на панели инструментов на кнопку перезагрузки после остановки!">
