--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Hareketli durum çubuğu paneli">
 <!ENTITY Ctr_mstatusbars4e	"Durum çubuğu paneli 'Status-4-Evar' tarafından kontrol edilir">
 <!ENTITY Ctr_mstatusbartpp	"Durum çubuğu paneli 'ThePuzzlePiece' tarafından kontrol edilir">
-<!ENTITY Ctr_mstatusbarpzt	"Durum çubuğu paneli 'Puzzle Toolbars' tarafından kontrol edilir">
+<!ENTITY Ctr_mstatusbarpzt	"Durum çubuğu paneli 'Puzzle Bars' tarafından kontrol edilir">
 <!ENTITY Ctr_mstatusbarabr	"Durum çubuğu paneli 'The Addon Bar (Restored)' tarafından kontrol edilir">
 <!ENTITY Ctr_combrelstop	"Dur &amp; yenile butonlarını birleştir">
 <!ENTITY Ctr_stoprel1		"Önemli: yenile butonunu dur butonundan sonra yerleştir!">
