--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"Рухомий рядок стану">
 <!ENTITY Ctr_mstatusbars4e	"Панель статусу контролюється додатком «Status-4-Evar»">
 <!ENTITY Ctr_mstatusbartpp	"Панель статусу контролюється додатком «ThePuzzlePiece»">
-<!ENTITY Ctr_mstatusbarpzt	"Панель статусу контролюється додатком «Puzzle Toolbars»">
+<!ENTITY Ctr_mstatusbarpzt	"Панель статусу контролюється додатком «Puzzle Bars»">
 <!ENTITY Ctr_mstatusbarabr	"Панель статусу контролюється додатком «The Addon Bar (Restored)»">
 <!ENTITY Ctr_combrelstop	"Об’єднати кнопки «Зупинити» та «Перезавантажити»">
 <!ENTITY Ctr_stoprel1		"Важливо: з’являється кнопка «Перезавантаження» на місці кнопки «Зупинити»!">
