--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
 <!ENTITY Ctr_mstatusbars4e	"状态栏面板由“Status-4-Evar”所控制">
 <!ENTITY Ctr_mstatusbartpp	"状态栏面板由“ThePuzzlePiece”所控制">
-<!ENTITY Ctr_mstatusbarpzt	"状态栏面板由“Puzzle Toolbars”所控制">
+<!ENTITY Ctr_mstatusbarpzt	"状态栏面板由“Puzzle Bars”所控制">
 <!ENTITY Ctr_mstatusbarabr	"状态栏面板由“The Addon Bar (Restored)”所控制">
 <!ENTITY Ctr_combrelstop	"在工具栏上合并停止和重新载入按钮">
 <!ENTITY Ctr_stoprel1		"重要: 将重新载入按钮放在停止按钮后面!">
