--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_mstatusbar		"使狀態列可移動">
 <!ENTITY Ctr_mstatusbars4e	"狀態列由 Status-4-Evar 控制">
 <!ENTITY Ctr_mstatusbartpp	"狀態列由 The Puzzle Piece 控制">
-<!ENTITY Ctr_mstatusbarpzt	"狀態列由 Puzzle Toolbars 控制">
+<!ENTITY Ctr_mstatusbarpzt	"狀態列由 Puzzle Bars 控制">
 <!ENTITY Ctr_mstatusbarabr	"狀態列由 The Addon Bar (Restored) 控制">
 <!ENTITY Ctr_combrelstop	"合併停止與重新載入按鈕">
 <!ENTITY Ctr_stoprel1		"工具列: 將重新載入按鈕放在停止按鈕之後!">
