--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -126,6 +126,10 @@
 <!ENTITY Ctr_options_rem	"Recordar última categoría seleccionada">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
 <!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Imágenes del 'dominio de primer nivel': Apariencia clásica">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
@@ -164,6 +168,7 @@
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña (about:config >> browser.search.openintab)">
 <!ENTITY Ctr_osearch_meoit	"Clic central: Busqueda en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente anchura del menú emergente">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"Flecha pequeña de despliegue">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
