--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -126,6 +126,10 @@
 <!ENTITY Ctr_options_rem	"Mémoriser la dernière catégorie sélectionnée">
 <!ENTITY Ctr_svgfilters		"Couleurs SVG pour les icônes des boutons de barres d'outils par défaut">
 <!ENTITY Ctr_wincontrols	"Rendre mobiles les commandes de la fenêtre en plein écran">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
 <!ENTITY Ctr_html5warning	"Afficher l'avertissement de passage en plein écran pour les vidéos HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Images de « domaine de premier niveau » : apparence classique">
 <!ENTITY Ctr_altalertbox	"« Boites de notification » : apparence alternative">
@@ -164,6 +168,7 @@
 <!ENTITY Ctr_search_oit		"Ouvrir la recherche dans un nouvel onglet (paramètre about:config)">
 <!ENTITY Ctr_osearch_meoit	"Clic milieu : rechercher dans un nouvel « onglet au premier plan »">
 <!ENTITY Ctr_osearch_iwidth	"Ajuster automatiquement la largeur de la fenêtre surgissante">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"Réduire la taille du bouton de liste déroulante">
 <!ENTITY Ctr_addonmanager	"Gestionnaire de modules">
 <!ENTITY Ctr_alt_addonsp	"Page « Plus » : ordre alternatif">
