--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -126,6 +126,10 @@
 <!ENTITY Ctr_options_rem	"最後に開いたカテゴリを記憶する">
 <!ENTITY Ctr_svgfilters		"デフォルトのツールバーボタンのアイコンを SVG カラーにする">
 <!ENTITY Ctr_wincontrols	"フルスクリーン用ウィンドウ制御ボタンを移動可能にする">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
 <!ENTITY Ctr_html5warning	"HTML5 フルスクリーン警告を表示する">
 <!ENTITY Ctr_oldtoplevimg	"トップレベルドメインイメージ: 古い外観で置き換える">
 <!ENTITY Ctr_altalertbox	"ダイアログ: 替わりの外観で置き換える">
@@ -164,6 +168,7 @@
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config設定)">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
