--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -126,6 +126,10 @@
 <!ENTITY Ctr_options_rem	"Запоминать последнюю выбранную категорию">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
 <!ENTITY Ctr_wincontrols	"Подвижное управление полноэкранным режимом">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
 <!ENTITY Ctr_html5warning	"HTML5 предупреждение полноэкранного режима">
 <!ENTITY Ctr_oldtoplevimg	"Изображение «домена верхнего уровня»: классический вид">
 <!ENTITY Ctr_altalertbox	"«Окно предупреждений»: альтернативный вид">
@@ -164,6 +168,7 @@
 <!ENTITY Ctr_search_oit		"Открывать поиск в новой вкладке (настройка about:config)">
 <!ENTITY Ctr_osearch_meoit	"Средний-клик: поиск в новой активной вкладке">
 <!ENTITY Ctr_osearch_iwidth	"Автонастройка ширины всплывающего меню">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"Маленький дропмаркер">
 <!ENTITY Ctr_addonmanager	"Управление дополнениями">
 <!ENTITY Ctr_alt_addonsp	"Страница дополнений «Подробнее»: альтернативный вид">
