--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -126,6 +126,10 @@
 <!ENTITY Ctr_options_rem	"记住最后选中的分类">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
+<!ENTITY Ctr_puibuttonsep	"Menu button separator">
+<!ENTITY Ctr_puibut_no_sep	"Hidden">
+<!ENTITY Ctr_puibut_l_sep	"Left">
+<!ENTITY Ctr_puibut_r_sep	"Right">
 <!ENTITY Ctr_html5warning	"HTML5 全屏警告">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
 <!ENTITY Ctr_altalertbox	"“提示框”: 备选的外观">
@@ -164,6 +168,7 @@
 <!ENTITY Ctr_search_oit		"在新标签页中搜索 (about:config 选项)">
 <!ENTITY Ctr_osearch_meoit	"中键点击: 在新的“前台标签页”中搜索">
 <!ENTITY Ctr_osearch_iwidth	"自动调整弹出框宽度">
+<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"较小的下拉按钮">
 <!ENTITY Ctr_addonmanager	"附加组件管理器">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
